<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_recognition_rqt</name>
  <version>0.0.5</version>
  <description>The image_recognition_rqt package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>image_recognition_util</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
