<?xml version="1.0"?>
<package format="3">
  <name>image_recognition_tensorflow</name>
  <version>0.0.5</version>
  <description>The image_recognition_tensorflow package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>image_recognition_msgs</exec_depend>
  <exec_depend>image_recognition_util</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tensorflow-pip</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tensorflow-pip</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
</package>
